# web-rwkv-ffi

./: Cargo.toml  README.md
include/: web_rwkv_ffi.h
src/: ext_v6.wgsl  ext_v7.wgsl  lib.rs  ops.rs
