[package]
edition = "2021"
name = "web-rwkv-ffi"
version = "0.1.2"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
fastrand = "2.3"
half = { version = "2.2", features = ["bytemuck", "serde"] }
itertools = "0.14"
log = "0.4"
memmap2 = "0.9"
safetensors = "0.5"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.41", features = ["full"] }
web-rwkv = "0.10.10"